# src/main/openapi/onecx-user-profile-avatar-internal-openapi.yaml
@@ -8,3 +8,298 @@ servers:
 tags:
  - name: avatarInternal
 paths:
+  /internal/avatar/{userId}:
+   post:
+    tags:
+     - avatarInternal
+    description: Upload Images
+    parameters:
+     - in: header
+       name: Content-Length
+       required: true
+       schema:
+        minimum: 1
+        maximum: 110000
+        type: integer
+     - name: userId
+       in: path
+       required: true
+       schema:
+        type: string
+     - name: refType
+       in: query
+       required: true
+       schema:
+        $ref: "#/components/schemas/RefType"
+    operationId: uploadImage
+    requestBody:
+     required: true
+     content:
+      image/*:
+       schema:
+        minimum: 1
+        maximum: 110000
+        type: string
+        format: binary
+    responses:
+     "201":
+      description: CREATED
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ImageInfo'
+     "400":
+      description: Bad Request
+   get:
+    tags:
+     - avatarInternal
+    description: Get Image by id
+    operationId: getImage
+    parameters:
+     - name: userId
+       in: path
+       required: true
+       schema:
+        type: string
+     - name: refType
+       required: true
+       in: query
+       schema:
+        $ref: "#/components/schemas/RefType"
+    responses:
+     "200":
+      description: OK
+      content:
+       image/*:
+        schema:
+         minimum: 1
+         maximum: 110000
+         type: string
+         format: binary
+     "400":
+      description: Bad request
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ProblemDetailResponse'
+   put:
+    tags:
+     - avatarInternal
+    description: update Images
+    operationId: updateImage
+    parameters:
+     - in: header
+       name: Content-Length
+       schema:
+        type: integer
+        minimum: 1
+        maximum: 110000
+     - name: userId
+       in: path
+       required: true
+       schema:
+        type: string
+     - name: refType
+       required: true
+       in: query
+       schema:
+        $ref: "#/components/schemas/RefType"
+    requestBody:
+     required: true
+     content:
+      image/*:
+       schema:
+        minimum: 1
+        maximum: 110000
+        type: string
+        format: binary
+    responses:
+     "200":
+      description: OK
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ImageInfo'
+     "400":
+      description: Bad request
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ProblemDetailResponse'
+   delete:
+    tags:
+     - avatarInternal
+    description: delete Image
+    operationId: deleteImage
+    parameters:
+     - name: userId
+       in: path
+       required: true
+       schema:
+        type: string
+    responses:
+     "204":
+      description: No Content
+     "400":
+      description: Bad request
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ProblemDetailResponse'
+  /internal/avatar/me:
+   post:
+    tags:
+     - avatarInternal
+    description: Upload Images
+    parameters:
+     - in: header
+       name: Content-Length
+       required: true
+       schema:
+        minimum: 1
+        maximum: 110000
+        type: integer
+     - name: refType
+       required: true
+       in: query
+       schema:
+        $ref: "#/components/schemas/RefType"
+    operationId: uploadMyImage
+    requestBody:
+     required: true
+     content:
+      image/*:
+       schema:
+        minimum: 1
+        maximum: 110000
+        type: string
+        format: binary
+    responses:
+     "201":
+      description: CREATED
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ImageInfo'
+     "400":
+      description: Bad Request
+   get:
+    tags:
+     - avatarInternal
+    description: Get Image by id
+    operationId: getMyImage
+    parameters:
+     - name: refType
+       required: true
+       in: query
+       schema:
+        $ref: "#/components/schemas/RefType"
+    responses:
+     "200":
+      description: OK
+      content:
+       image/*:
+        schema:
+         minimum: 1
+         maximum: 110000
+         type: string
+         format: binary
+     "400":
+      description: Bad request
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ProblemDetailResponse'
+   put:
+    tags:
+     - avatarInternal
+    description: update Images
+    operationId: updateMyImage
+    parameters:
+     - in: header
+       name: Content-Length
+       schema:
+        type: integer
+        minimum: 1
+        maximum: 110000
+     - name: refType
+       in: query
+       required: true
+       schema:
+        $ref: "#/components/schemas/RefType"
+    requestBody:
+     required: true
+     content:
+      image/*:
+       schema:
+        minimum: 1
+        maximum: 110000
+        type: string
+        format: binary
+    responses:
+     "200":
+      description: OK
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ImageInfo'
+     "400":
+      description: Bad request
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ProblemDetailResponse'
+   delete:
+    tags:
+     - avatarInternal
+    description: delete Image
+    operationId: deleteMyImage
+    responses:
+     "204":
+      description: No Content
+     "400":
+      description: Bad request
+      content:
+       application/json:
+        schema:
+         $ref: '#/components/schemas/ProblemDetailResponse'
+components:
+ schemas:
+  RefType:
+   type: string
+   enum: [ small, medium, large ]
+   default: 'medium'
+  ImageInfo:
+   type: object
+   properties:
+    id:
+     type: string
+  ProblemDetailResponse:
+   type: object
+   properties:
+    errorCode:
+     type: string
+    detail:
+     type: string
+    params:
+     type: array
+     items:
+      $ref: '#/components/schemas/ProblemDetailParam'
+    invalidParams:
+     type: array
+     items:
+      $ref: '#/components/schemas/ProblemDetailInvalidParam'
+  ProblemDetailParam:
+   type: object
+   properties:
+    key:
+     type: string
+    value:
+     type: string
+  ProblemDetailInvalidParam:
+   type: object
+   properties:
+    name:
+     type: string
+    message:
+     type: string
